# gnss_research_raspi

./: .env.sample  .gitignore  CMakeLists.txt  README.md  bluez_thread.py  i2c.c  i2c_thread.py  main.py  nmea_thread.py  ntrip.c  ntrip_thread.py  pyproject.toml  uart_thread.py  utils.c
include/: hoge.h  ntrip.h  utils.h
